Links now open in new tab

--- a/public/about.html
+++ b/public/about.html
@@ -11,8 +11,8 @@
     Основным объектом приложения являются тесты с вопросами и вариантами ответов.
     В приложении есть две группы пользователей - пользователи, которые создают тесты и управляют ими, и пользователи,
     которые проходят тесты.
-    Приложение разрабатывается в ходе прохождения обучающего курса Ruby on Rails от <a
-      href="http://www.thinknetica.com/">Thinknetica</a>.</p>
+    Приложение разрабатывается в ходе прохождения обучающего курса Ruby on Rails от <a target="_blank"
+      rel="noopener noreferrer" href="http://www.thinknetica.com/">Thinknetica</a>.</p>
   <p>Основные возможности приложения:</p>
   <ul>
     <li>Создание тестов и управление ими</li>
