--- a/public/about/author.html
+++ b/public/about/author.html
@@ -7,7 +7,8 @@
 
 <body>
   <h1>Об авторе</h1>
-  <p>Автор: Корнеев Александр<br><a href="https://github.com/alxkorn">GitHub</a></p>
+  <p>Автор: Корнеев Александр<br><a target="_blank" rel="noopener noreferrer"
+      href="https://github.com/alxkorn">GitHub</a></p>
 </body>
 
 </html>
